fix(comp:tag): tag content not aligned center (#1650)

--- a/packages/components/tag/style/index.less
+++ b/packages/components/tag/style/index.less
@@ -29,6 +29,11 @@
     padding-left: 4px;
   }
 
+  &-content {
+    flex: auto;
+    text-align: center;
+  }
+
   &-bordered {
     border-color: @tag-border-color;
   }
